name:                amazonka-examples
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/algas/amazonka-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Masahiro Yamauchi
maintainer:          sgt.yamauchi@gmail.com
copyright:           2016 Masahiro Yamauchi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , amazonka
                     , amazonka-s3
  default-language:    Haskell2010

executable amazonka-examples-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amazonka-examples
  default-language:    Haskell2010

test-suite amazonka-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , amazonka-examples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/algas/amazonka-examples
