name:                amazonka-examples
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/algas/amazonka-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Masahiro Yamauchi
maintainer:          sgt.yamauchi@gmail.com
copyright:           2016 Masahiro Yamauchi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable amazonka-examples
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens
                     , amazonka
                     , amazonka-s3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/algas/amazonka-examples
